--- a/bases/tsconfig.json
+++ b/bases/tsconfig.json
@@ -107,5 +107,5 @@
       "skipLibCheck": true /* Skip type checking all .d.ts files. */
    },
    "exclude": ["node_modules"],
-   "include": ["ES6"]
+   "include": ["classes"]
 }
